--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <p> This is a paragraph about how p tags work. pee pee poo poo pee pee poo poo pee pee poo poo. </p>
+  </body>
+</html>
