--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <title> PeePEE PooPoo </title>
   </head>
   <body>
+    <!-- all of my grief on the internet projects live here -->
     <p> This is a paragraph about how p tags work. pee pee poo poo pee pee poo poo pee pee poo poo. </p>
+
+    <!-- all of my cool music videos go here -->
+    
   </body>
 </html>
