--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   </head>
   <body>
     <!-- all of my grief on the internet projects live here -->
+    <h1> This is the header of my page it is so important!</h1>
     <p> This is a paragraph about how p tags work. pee pee poo poo pee pee poo poo pee pee poo poo. </p>
+
+    <a href="https://en.wikipedia.org/wiki/Cat">  kitty kat </a>
 
     <!-- all of my cool music videos go here -->
     
