--- a/aboutpee.html
+++ b/aboutpee.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - A Pen by Janna Ahrndt</title>
+  <link rel="stylesheet" href="./style.css">
 
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<p> Help ME!</p>
+  <a href="index2.html"> this is a link</a>
+<div class="srsly"><p>no srsly...I NEED HELP!</p></div>
+<!-- partial -->
+ <a href="https://github.com/profjanna/ART299/tree/main/mywebsitefolder">This is a link to a folder</a> 
+</body>
+</html>
