--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p> This is a paragraph about how p tags work. pee pee poo poo pee pee poo poo pee pee poo poo. </p>
 
     <a href="https://en.wikipedia.org/wiki/Cat">  kitty kat </a>
+    <a href="aboutpee.html"> About </a>
 
     <!-- all of my cool music videos go here -->
     
