--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <a href="aboutpee.html"> About </a>
 
     <!-- all of my cool music videos go here -->
-    <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Felis_catus-cat_on_snow.jpg/2560px-Felis_catus-cat_on_snow.jpg" alt ="this is a cat in the snow">
+    <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Felis_catus-cat_on_snow.jpg/2560px-Felis_catus-cat_on_snow.jpg" alt ="this is a cat in the snow" width="100">
   </body>
 </html>
