--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
     <!-- all of my cool music videos go here -->
     <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Felis_catus-cat_on_snow.jpg/2560px-Felis_catus-cat_on_snow.jpg" alt ="this is a cat in the snow" width="100">
-    <img src="me.png" alt= a photo of a human in a cowboy hat in front of a green screen>
+    <img src="me.png" alt= "a photo of a human in a cowboy hat in front of a green screen" width= "50%">
   </body>
 </html>
